--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "todos",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "v14.7.0",
+    "npm": "6.14.7"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
@@ -9,7 +13,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
