--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "todos",
   "version": "0.1.0",
   "private": true,
-  "engines":{
+  "engines": {
     "node": "v14.7.0",
     "npm": "6.14.7"
   },
+  "homepage": "https://mshweta-7829.github.io/todo-list/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
     "bootstrap": "^4.5.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.3"
@@ -18,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
